# mcp-solana-ico

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini
mcp_simple_ico/: server.py
mcp_solana_ico/: __init__.py  actions.py  affiliates.py  config.py  dex.py  errors.py  ico_manager.py  pricing.py  rate_limiter.py  schemas.py  server.py  solana_utils.py  utils.py
mcp_solana_ico/ico_configs/: main_ico.json  secondary_ico.json
tests/integration/: test_ico_server.py
